     shouldn't have any uncommitted changes on them anyway.
     We also copy the instances over without using any events now, so that
     the 'dirty' list on the new session remains unaffected.

   - fixed bug which could arise when using session.begin_nested() in conjunction
     with more than one level deep of enclosing session.begin() statements

- dialects

   - MSSQL
      - PyODBC no longer has a global "set nocount on".
      - Fix non-identity integer PKs on autload [ticket:824]
      - Better support for convert_unicode [ticket:839]
      - Less strict date conversion for pyodbc/adodbapi [ticket:842]
      - Schema-qualified tables / autoload [ticket:901]

   - Firebird backend

     - does properly reflect domains (partially fixing [ticket:410]) and
       PassiveDefaults

     - reverted to use default poolclass (was set to SingletonThreadPool in
       0.4.0 [3562] for test purposes)

     - map func.length() to 'char_length' (easily overridable with the UDF
       'strlen' on old versions of Firebird)


0.4.1
-----

- sql

  - the "shortname" keyword parameter on bindparam() has been 
    deprecated.
  
  - Added contains operator (generates a "LIKE %<other>%" clause).

  - anonymous column expressions are automatically labeled.  
    e.g. select([x* 5]) produces "SELECT x * 5 AS anon_1".
    This allows the labelname to be present in the cursor.description
    which can then be appropriately matched to result-column processing
    rules. (we can't reliably use positional tracking for result-column 
    matches since text() expressions may represent multiple columns).
  
  - operator overloading is now controlled by TypeEngine objects - the 
    one built-in operator overload so far is String types overloading
    '+' to be the string concatenation operator.
    User-defined types can also define their own operator overloading
    by overriding the adapt_operator(self, op) method.
    